[HBI-212] fixed alignment empty section in the progress (#1068)

--- a/lms/static/sass/blocks/_progress.scss
+++ b/lms/static/sass/blocks/_progress.scss
@@ -40,3 +40,12 @@
 .wrapper-msg.wrapper-auto-cert .auto-cert-message {
     border-left-color: $base-color;
 }
+
+.profile-wrapper #course-info-progress > .chapters > section {
+    display: flex;
+
+    .sections>div .hd.hd-4 {
+        width: 100%;
+        display: block;
+    }
+}
